[gd_scene load_steps=14 format=2]

[ext_resource path="res://cenas/Menu.gd" type="Script" id=1]
[ext_resource path="res://font/SpaceSurfer_Demo.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://som/musica.wav" type="AudioStream" id=3]
[ext_resource path="res://cenas/am.tscn" type="PackedScene" id=4]
[ext_resource path="res://cenas/estre.tscn" type="PackedScene" id=5]
[ext_resource path="res://som/destro_1.wav" type="AudioStream" id=6]
[ext_resource path="res://font/SPACE.ttf" type="DynamicFontData" id=7]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 7 )

[node name="Menu" type="Control"]
anchor_left = 0.488
anchor_top = 0.5
anchor_right = 0.488
anchor_bottom = 0.5
margin_left = 0.287964
margin_right = 0.287964
theme = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" parent="." instance=ExtResource( 4 )]
margin_left = -204.0
margin_top = -148.0
margin_right = 271.0
margin_bottom = -68.0

[node name="Button" type="Button" parent="."]
margin_left = -44.9531
margin_top = -12.0
margin_right = 75.0469
margin_bottom = 24.0
custom_fonts/font = SubResource( 2 )
text = "JOGAR"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = -44.9531
margin_top = 76.0
margin_right = 77.0469
margin_bottom = 112.0
custom_fonts/font = SubResource( 3 )
text = "SOBRE"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -44.9531
margin_top = 138.47
margin_right = 38.0469
margin_bottom = 174.47
custom_fonts/font = SubResource( 4 )
text = "SAIR"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
margin_left = -68.0
margin_top = 28.0
margin_right = 107.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 5 )
text = "TUTORIAL"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true

[node name="Particles2D" parent="." instance=ExtResource( 5 )]

[node name="botao" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Label2" type="Label" parent="."]
margin_left = -500.0
margin_top = 276.0
margin_right = -460.0
margin_bottom = 299.0
custom_fonts/font = SubResource( 6 )
text = "0.3v"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
